--- a/index.html
+++ b/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/freereg.css" />
     <title>style-guide</title>
   </head>
-  <body>
+  <body class="fc">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <nav>Hello</nav>
+
+    <header>
+      <nav role="navigation">
+        <a class="logo" href="https://reg.dev2.freecomett.org.uk/">
+          <img src="/css/images/freecomett.svg" alt="FreeComETT logo">
+        </a>
+        <ul>
+          <li>Transcription
+            <ul>
+              <li>Active transcriptions</li>
+              <li>Manage assignments</li>
+              <li>Create new assignment</li>
+              <li>Load CSV File</li>
+              <li>Create</li>
+            </ul>
+          </li>
+          <li>Edit</li>
+          <li>Tools</li>
+          <li>Support
+            <ul>
+              <li>See all comments</li>
+              <li>Post a comment</li>
+              <li>Message Coordinator</li>
+            </ul>
+          </li>
+        </ul>
+        <a class="logo block" href="https://reg.dev2.freecomett.org.uk/">
+          <img src="/css/images/freereg.svg" alt="FreeREG logo">
+        </a>
+      </nav>
+    </header>
+    <a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
+    <table>
+    <thead>
+    <tr>
+      <th>Date placed</th>
+      <th>Assignment</th>
+      <th>Some column1</th>
+      <th>Some column2</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>2021-01-01</td>
+      <td>Assignment 1</td>
+      <td>Some data</td>
+      <td>Some data</td>
+    </tr>
+    <tr>
+      <td>2021-12-15</td>
+      <td>Assignment 2</td>
+      <td>Some data</td>
+      <td>Some data</td>
+    </tr>
+    </tbody>
+    </table>
+
+
+
   </body>
 </html>
