Add input text element to demo.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         </a>
       </nav>
     </header>
+
+    <section class="inputs py-2">
+      <label for="input_fld">Enter a search term:
+        <input type="text" id="input_fld" />
+      </label>
+    </section>
+
+
     <a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
     <table>
     <thead>
