Change nav drop-down options, add footer.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
           <img src="/css/images/freecomett.svg" alt="FreeComETT logo">
         </a>
         <ul>
-          <li>Transcription
+          <li>File
             <ul>
-              <li>Active transcriptions</li>
-              <li>Manage assignments</li>
-              <li>Create new assignment</li>
-              <li>Load CSV File</li>
-              <li>Create</li>
+              <li>New</li>
+              <li>Open</li>
+              <li>Log Out</li>
             </ul>
           </li>
           <li>Edit</li>
-          <li>Tools</li>
+          <li>Tools
+            <ul>
+              <li>Upload CSV</li>
+              <li>View Upload Status</li>
+              <li>List Images</li>
+              <li>Refresh Page</li>
+              <li>Log into FreeREG</li>
+              <li>Administration</li>
+            </ul>
+          </li>
           <li>Support
             <ul>
               <li>See all comments</li>
@@ -42,15 +49,14 @@
       </nav>
     </header>
 
-    <section class="inputs py-2">
+    <section class="inputs py-2 ml-1">
       <label for="input_fld">Enter a search term:
         <input type="text" id="input_fld" />
       </label>
     </section>
 
-
-    <a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
-    <table>
+    <a class="block py-2 ml-1" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
+    <table class="ml-1">
     <thead>
     <tr>
       <th>Date placed</th>
@@ -75,6 +81,9 @@
     </tbody>
     </table>
 
+  <footer class="row mt-3 ml-1">
+    This is the demo footer
+  </footer>
 
 
   </body>
