--- a/index.html
+++ b/index.html
@@ -1,172 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/freereg.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/css/freereg.css"/>
     <title>style-guide</title>
-  </head>
-  <body class="fc">
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+</head>
+<body class="fc">
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
 
-    <header>
-      <nav role="navigation">
+<header>
+    <nav role="navigation">
         <a class="logo" href="https://reg.dev2.freecomett.org.uk/">
-          <img src="/css/images/freecomett.svg" alt="FreeComETT logo" />
+            <img src="/css/images/freecomett.svg" alt="FreeComETT logo"/>
         </a>
         <ul>
-          <li>File
-            <ul>
-              <li>New</li>
-              <li>Open</li>
-              <li>Log Out</li>
-            </ul>
-          </li>
-          <li>Edit</li>
-          <li>Tools
-            <ul>
-              <li>Upload CSV</li>
-              <li>View Upload Status</li>
-              <li>List Images</li>
-              <li>Refresh Page</li>
-              <li>Log into FreeREG</li>
-              <li>Administration</li>
-            </ul>
-          </li>
-          <li>Support
-            <ul>
-              <li>See all comments</li>
-              <li>Post a comment</li>
-              <li>Message Coordinator</li>
-            </ul>
-          </li>
+            <li>File
+                <ul>
+                    <li>New</li>
+                    <li>Open</li>
+                    <li>Log Out</li>
+                </ul>
+            </li>
+            <li>Edit</li>
+            <li>Tools
+                <ul>
+                    <li>Upload CSV</li>
+                    <li>View Upload Status</li>
+                    <li>List Images</li>
+                    <li>Refresh Page</li>
+                    <li>Log into FreeREG</li>
+                    <li>Administration</li>
+                </ul>
+            </li>
+            <li>Support
+                <ul>
+                    <li>See all comments</li>
+                    <li>Post a comment</li>
+                    <li>Message Coordinator</li>
+                </ul>
+            </li>
         </ul>
         <a class="logo block" href="https://reg.dev2.freecomett.org.uk/">
-          <img src="/css/images/freereg.svg" alt="FreeREG logo" />
+            <img src="/css/images/freereg.svg" alt="FreeREG logo"/>
         </a>
-      </nav>
-    </header>
-    <section class="breadcrumb-trail">
-      <a href="#">Home</a>
-      <img
-        src="./css/images/icon-breadcrumb-arrow.svg"
-        alt="breadcrumb trail next item indicator"
-      />
-      <a href="#">Section</a>
-      <img
-        src="./css/images/icon-breadcrumb-arrow.svg"
-        alt="breadcrumb trail next item indicator"
-      />
-      <span>Current Page</span>
-    </section>
+    </nav>
+</header>
+<section class="breadcrumb-trail">
+    <a href="#">Home</a>
+    <img
+            src="./css/images/icon-breadcrumb-arrow.svg"
+            alt="breadcrumb trail next item indicator"
+    />
+    <a href="#">Section</a>
+    <img
+            src="./css/images/icon-breadcrumb-arrow.svg"
+            alt="breadcrumb trail next item indicator"
+    />
+    <span>Current Page</span>
+</section>
 
-    <section class="inputs py-2">
-      <label for="input_fld"
-        >Enter a search term:
+<section class="inputs py-2">
+    <label for="input_fld"
+    >Enter a search term:
+    </label>
+</section>
 
-    <section class="inputs py-2 ml-1">
-      <label for="input_fld">Enter a search term:
-        <input type="text" id="input_fld" />
-      </label>
-    </section>
+<section class="inputs py-2 ml-1">
+    <label for="input_fld">Enter a search term:
+        <input type="text" id="input_fld"/>
+    </label>
+</section>
 
-    <a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git"
-      >Style Guide repository</a
-    >
-    <table>
-      <thead>
-        <tr>
-          <th>Date placed</th>
-          <th>Assignment</th>
-          <th>Select</th>
-          <th>Rotate</th>
-          <th>Click to show image</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2021-01-01</td>
-          <td>Assignment 1</td>
-          <td>
-            <input type="checkbox" name="first-checkbox" id="first-checkbox" />
-          </td>
-          <td>
-            <button class="button icon-only" aria-label="rotate">
-              <img src="./css/images/icon-rotate.svg" alt="rotate icon" />
-            </button>
-          </td>
-          <td><button class="button show-image icon-only">
-            <img src="./css/images/test-img-thumbnail.jpg" alt="thumbnnail image" />
-          </button></td>
-        </tr>
-        <tr>
-          <td>2021-12-15</td>
-          <td>Assignment 2</td>
-          <td>
-            <input
-              type="checkbox"
-              name="second-checkbox"
-              id="second-checkbox"
-            />
-          </td>
-           <td>
-            <button class="button icon-only" aria-label="rotate">
-              <img src="./css/images/icon-rotate.svg" alt="rotate icon" />
-            </button>
-          </td>
-           <td><button class="button show-image icon-only">
-            <img src="./css/images/test-img-thumbnail.jpg" alt="thumbnnail image" />
-          </button></td>
-        </tr>
-      </tbody>
-    </table>
-    <section class="buttons">
-      <button class="button"><span>Button (default)</span></button>
-      <button class="button-hover button"><span>Button (hover)</span></button>
-      <button class="button-disabled button">
-        <span>Button (disabled)</span>
-      </button>
-      <button class="button-focus button">
-        <span>Button (focus)</span>
-      </button>
-    </section>
-    <a class="block py-2 ml-1" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
-    <table class="ml-1">
+<a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git"
+>Style Guide repository</a>
+<table>
     <thead>
     <tr>
-      <th>Date placed</th>
-      <th>Assignment</th>
-      <th>Some column1</th>
-      <th>Some column2</th>
+        <th>Date placed</th>
+        <th>Assignment</th>
+        <th>Select</th>
+        <th>Rotate</th>
+        <th>Click to show image</th>
     </tr>
     </thead>
     <tbody>
     <tr>
-      <td>2021-01-01</td>
-      <td>Assignment 1</td>
-      <td>Some data</td>
-      <td>Some data</td>
+        <td>2021-01-01</td>
+        <td>Assignment 1</td>
+        <td>
+            <input type="checkbox" name="first-checkbox" id="first-checkbox"/>
+        </td>
+        <td>
+            <button class="button icon-only" aria-label="rotate">
+                <img src="./css/images/icon-rotate.svg" alt="rotate icon"/>
+            </button>
+        </td>
+        <td>
+            <button class="button show-image icon-only">
+                <img src="./css/images/test-img-thumbnail.jpg" alt="thumbnnail image"/>
+            </button>
+        </td>
     </tr>
     <tr>
-      <td>2021-12-15</td>
-      <td>Assignment 2</td>
-      <td>Some data</td>
-      <td>Some data</td>
+        <td>2021-12-15</td>
+        <td>Assignment 2</td>
+        <td>
+            <input
+                    type="checkbox"
+                    name="second-checkbox"
+                    id="second-checkbox"
+            />
+        </td>
+        <td>
+            <button class="button icon-only" aria-label="rotate">
+                <img src="./css/images/icon-rotate.svg" alt="rotate icon"/>
+            </button>
+        </td>
+        <td>
+            <button class="button show-image icon-only">
+                <img src="./css/images/test-img-thumbnail.jpg" alt="thumbnnail image"/>
+            </button>
+        </td>
     </tr>
     </tbody>
-    </table>
+</table>
+<section class="buttons">
+    <button class="button"><span>Button (default)</span></button>
+    <button class="button-hover button"><span>Button (hover)</span></button>
+    <button class="button-disabled button">
+        <span>Button (disabled)</span>
+    </button>
+    <button class="button-focus button">
+        <span>Button (focus)</span>
+    </button>
+</section>
+<a class="block py-2 ml-1" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
+<table class="ml-1">
+    <thead>
+    <tr>
+        <th>Date placed</th>
+        <th>Assignment</th>
+        <th>Some column1</th>
+        <th>Some column2</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>2021-01-01</td>
+        <td>Assignment 1</td>
+        <td>Some data</td>
+        <td>Some data</td>
+    </tr>
+    <tr>
+        <td>2021-12-15</td>
+        <td>Assignment 2</td>
+        <td>Some data</td>
+        <td>Some data</td>
+    </tr>
+    </tbody>
+</table>
 
-  <footer class="row mt-3 ml-1">
+<footer class="row mt-3 ml-1">
     This is the demo footer
-  </footer>
-    <input
-      type="search"
-      name="search"
-      id="search"
-      placeholder="Search"
-      required="true"
-    />
-  </body>
+</footer>
+<input
+        type="search"
+        name="search"
+        id="search"
+        placeholder="Search"
+        required="true"
+/>
+</body>
 </html>
