--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="button.html">Button</a>
     <a href="input.html">Input</a>
     <a href="nav.html">Nav</a>
+    <a href="image.html">Images</a>
 
     <section class="table-container mt-2">
         <table>
@@ -70,6 +71,12 @@
         </table>
     </section>
 </main>
+
+<section class="toast-container">
+    <section class="toast-success">
+       <p class="px-2 py-3">This is a toast message</p>
+    </section>
+</section>
 
 <footer class="row mt-3 ml-1">This is the demo footer</footer>
 </body>
