--- a/input.html
+++ b/input.html
@@ -27,6 +27,15 @@
             <option>Climb the curtains kitten</option>
         </select>
     </section>
+
+    <section class="mt-4">
+        <h2>Hidden fields</h2>
+        <button id="show-btn" class="mt-2">Show</button>
+        <label class="hidden ml-3" id="hidden-container" for="hidden-field">
+            hidden label
+            <input type="text" id="hidden-field" value="field value" />
+        </label>
+    </section>
 </main>
 
 </body>
