--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <a href="input.html">Input</a>
     <a href="nav.html">Nav</a>
     <a href="image.html">Images</a>
+    <a href="login.html">Login</a>
 
     <section class="table-container mt-2">
         <table>
