feature/view-images-template-add markup, import specific styles.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <a href="nav.html">Nav</a>
     <a href="image.html">Images</a>
     <a href="login.html">Login</a>
+    <a href="view-images.html">View Images</a>
 
     <section class="table-container mt-2">
         <table>
