--- a/view-images.html
+++ b/view-images.html
@@ -46,77 +46,55 @@
         </a>
     </nav>
 </header>
-    <main class="col-md-8 col-md-offset-2">
-        <div class="title">
-            <h1 class="mt-1">View Images</h1>
-        </div>
-        <div class="button-rotate-feature">
-            <button class="rotate-clockwise">Rotate clockwise</button>
-            <button class="rotate-anticlockwise">Rotate anti-clockwise</button>
-        </div>
-        <section class="view-images-grid-container">
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-            <div class="view-images-image-wrapper">
-                <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
-            </div>
-        </section>
+<main class="col-md-8 col-md-offset-2">
 
-        <div class="button-cancel-save">
-            <button class="cancel">Rotate clockwise</button>
-            <button class="save">Rotate anti-clockwise</button>
+    <div class="title">
+        <h1 class="mt-1">View Images</h1>
+    </div>
+    <div class="button-rotate-feature">
+        <button class="rotate-clockwise">Rotate clockwise</button>
+        <button class="rotate-anticlockwise">Rotate anti-clockwise</button>
+    </div>
+    <section class="view-images-grid-container container px-0">
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+        </div>
+        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
         </div>
 
-    </main>
+    </section>
+
+    <div class="button-cancel-save">
+        <button class="cancel">Rotate clockwise</button>
+        <button class="save">Rotate anti-clockwise</button>
+    </div>
+
+</main>
 
 </body>
 </html>
