feature/view-images-template-adjust 6 items per row on lg+.

--- a/view-images.html
+++ b/view-images.html
@@ -47,44 +47,53 @@
     </nav>
 </header>
 <main class="col-md-8 col-md-offset-2">
-
-    <div class="title">
+    <div class="title py-2 px-2">
         <h1 class="mt-1">View Images</h1>
     </div>
     <div class="button-rotate-feature">
         <button class="rotate-clockwise">Rotate clockwise</button>
         <button class="rotate-anticlockwise">Rotate anti-clockwise</button>
     </div>
-    <section class="view-images-grid-container container px-0">
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+    <section class="view-images-grid-container centre container px-0">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-1.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-2.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-3.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-4.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-5.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-6.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-7.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-8.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-9.jpg</p>
         </div>
-        <div class="view-images-image-wrapper centre my-1 col-4 col-md-3 col-lg-2">
+        <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
             <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <p>Filename-10.jpg</p>
         </div>
 
     </section>
