added placeholders for labels and different orientation for labels.

--- a/input.html
+++ b/input.html
@@ -37,18 +37,23 @@
       </section>
 
       <section>
-        <label class="label-above mt-2">Label above input box</label>
-        <input class="label-above mt-1" placeholder="Type here" />
+        <label class="label mt-2"
+          >Label above input box
+          <input class="label-above mt-1" placeholder="Type here"
+        /></label>
       </section>
 
       <section class="mt-2">
-        <label class="label-left mt-2">Label to the left of input box</label>
-        <input class="label-left" placeholder="Type here" />
+        <label class="label-left mt-2"
+          >Label to the left of input box
+          <input class="label-left mt-1 ml-1" placeholder="Type here" />
+        </label>
       </section>
 
       <section class="mt-2">
-        <label class="mt-2">Disabled input box</label>
-        <input class="input-disabled" disabled />
+        <label class="mt-2" disabled
+          >Disabled input box <input class="input-disabled mt-1" disabled
+        /></label>
       </section>
     </main>
   </body>
