update markup to facilitate FE img preview manipulation WIP

--- a/view-images.html
+++ b/view-images.html
@@ -51,59 +51,59 @@
         <h1 class="mt-1">View Images</h1>
     </div>
     <div class="button-rotate-feature">
-        <button class="rotate-clockwise">Rotate clockwise</button>
-        <button class="rotate-anticlockwise">Rotate anti-clockwise</button>
+        <button id="rotate-clockwise">Rotate clockwise</button>
+        <button id="rotate-anticlockwise">Rotate anti-clockwise</button>
     </div>
     <section class="view-images-grid-container centre container px-0">
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-1.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-2.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-3.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-4.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-5.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-6.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-7.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-8.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-9.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image">
+            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
             <p>Filename-10.jpg</p>
         </div>
 
     </section>
 
     <div class="button-cancel-save">
-        <button class="cancel">Rotate clockwise</button>
-        <button class="save">Rotate anti-clockwise</button>
+        <button id="cancel-btn" class="cancel">Cancel</button>
+        <button id="save-btn" class="save">Save</button>
     </div>
 
 </main>
-
+<script type="module" src="/src/imageRotate.js"></script>
 </body>
 </html>
