Add load-csv html page.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <a href="image.html">Images</a>
     <a href="login.html">Login</a>
     <a href="view-images.html">View Images</a>
+    <a href="load-csv.html">Load CSV File</a>
 
     <section class="table-container mt-2">
         <table>
