Add button.submit example.

--- a/button.html
+++ b/button.html
@@ -17,10 +17,11 @@
 
     <section class="flex">
         <button>Button</button>
-        <button disabled="disabled">Disabled</button>
+        <button class="ml-4" disabled="disabled">Disabled</button>
+        <button class="ml-4 submit">Submit</button>
     </section>
 
-    <div class="carousel my-2">
+    <div class="carousel my-3">
         <div class="carousel-sliders">
             <input type="image" class="sliders" src="./css/images/btn-left.png"  alt="left"/>
 
