--- a/input.html
+++ b/input.html
@@ -51,7 +51,7 @@
       </section>
 
       <section class="mt-2">
-        <label class="mt-2" disabled
+        <label class="mt-2 disabled"
           >Disabled input box <input class="input-disabled mt-1" disabled
         /></label>
       </section>
