added home page links to new pages

--- a/load-csv.html
+++ b/load-csv.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -54,10 +54,16 @@
     <main class="gutter load-csv">
       <section class="breadcrumb-trail mt-2 row py-1">
         <div class="breadcrumb">
-          <a href="#">Home</a>
-          <img src="./css/images/icon-breadcrumb-arrow.svg" alt="breadcrumb trail next item indicator" />
+          <a href="index.html">Home</a>
+          <img
+            src="./css/images/icon-breadcrumb-arrow.svg"
+            alt="breadcrumb trail next item indicator"
+          />
           <a href="#">Section</a>
-          <img src="./css/images/icon-breadcrumb-arrow.svg" alt="breadcrumb trail next item indicator" />
+          <img
+            src="./css/images/icon-breadcrumb-arrow.svg"
+            alt="breadcrumb trail next item indicator"
+          />
           <span>Current Page</span>
         </div>
 
@@ -85,7 +91,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by CSV File Name">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     CSV File Name
                   </div>
@@ -93,7 +103,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Place">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Place
                   </div>
@@ -101,7 +115,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Church">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Church
                   </div>
@@ -109,7 +127,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Entries">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Entries
                   </div>
@@ -117,7 +139,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Start Year">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Start Year
                   </div>
@@ -125,7 +151,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by End Year">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     End Year
                   </div>
@@ -133,7 +163,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Processed">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Processed
                   </div>
@@ -141,7 +175,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Locked TR">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Locked TR
                   </div>
@@ -149,7 +187,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Locked SC">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Locked SC
                   </div>
@@ -202,8 +244,18 @@
             <p>Double click the header to sort by it</p>
           </div>
           <div class="load-csv__search-container">
-            <form role="search" class="load-csv__search-form" action="#" method="get">
-              <input class="search" type="search" placeholder="Search" id="search" />
+            <form
+              role="search"
+              class="load-csv__search-form"
+              action="#"
+              method="get"
+            >
+              <input
+                class="search"
+                type="search"
+                placeholder="Search"
+                id="search"
+              />
             </form>
           </div>
         </div>
@@ -215,7 +267,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by CSV File Name">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     CSV File Name
                   </div>
@@ -223,7 +279,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Place">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Place
                   </div>
@@ -231,7 +291,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Church">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Church
                   </div>
@@ -239,7 +303,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Entries">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Entries
                   </div>
@@ -247,7 +315,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Start Year">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Start Year
                   </div>
@@ -255,7 +327,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by End Year">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     End Year
                   </div>
@@ -263,7 +339,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Processed">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Processed
                   </div>
@@ -271,7 +351,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Locked TR">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Locked TR
                   </div>
@@ -279,7 +363,11 @@
                 <th>
                   <div class="load-csv__table-head-row row">
                     <span role="button" aria-label="Sort by Locked SC">
-                      <img src="/css/images/freecomett-sort.svg" alt="" aria-hidden="true" />
+                      <img
+                        src="/css/images/freecomett-sort.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
                     </span>
                     Locked SC
                   </div>
@@ -327,8 +415,6 @@
       </section>
     </main>
 
-    <footer class="row mt-3 ml-1">
-      This is the demo footer
-    </footer>
+    <footer class="row mt-3 ml-1">This is the demo footer</footer>
   </body>
 </html>
