--- a/view-images.html
+++ b/view-images.html
@@ -1,109 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Style Demo - View Images</title>
     <script type="module" src="/src/main.js"></script>
-</head>
-<body>
-<header>
-    <nav role="navigation">
+  </head>
+  <body>
+    <header>
+      <nav role="navigation">
         <a class="logo" href="https://reg.dev2.freecomett.org.uk/">
-            <img src="/css/images/freecomett.svg" alt="FreeComETT logo"/>
+          <img src="/css/images/freecomett.svg" alt="FreeComETT logo" />
         </a>
         <ul>
-            <li>
-                File
-                <ul>
-                    <li>New</li>
-                    <li>Open</li>
-                    <li>Log Out</li>
-                </ul>
-            </li>
-            <li>
-                Tools
-                <ul>
-                    <li>Upload CSV</li>
-                    <li>View Upload Status</li>
-                    <li>List Images</li>
-                    <li>Refresh Page</li>
-                    <li>Log into FreeREG</li>
-                    <li>Administration</li>
-                </ul>
-            </li>
-            <li>
-                Support
-                <ul>
-                    <li>See all comments</li>
-                    <li>Post a comment</li>
-                    <li>Message Coordinator</li>
-                </ul>
-            </li>
+          <li>
+            File
+            <ul>
+              <li>New</li>
+              <li>Open</li>
+              <li>Log Out</li>
+            </ul>
+          </li>
+          <li>
+            Tools
+            <ul>
+              <li>Upload CSV</li>
+              <li>View Upload Status</li>
+              <li>List Images</li>
+              <li>Refresh Page</li>
+              <li>Log into FreeREG</li>
+              <li>Administration</li>
+            </ul>
+          </li>
+          <li>
+            Support
+            <ul>
+              <li>See all comments</li>
+              <li>Post a comment</li>
+              <li>Message Coordinator</li>
+            </ul>
+          </li>
         </ul>
         <a class="logo block" href="https://reg.dev2.freecomett.org.uk/">
-            <img src="/css/images/freereg.svg" alt="FreeREG logo"/>
+          <img src="/css/images/freereg.svg" alt="FreeREG logo" />
         </a>
-    </nav>
-</header>
-<main class="col-md-8 col-md-offset-2">
-    <div class="title py-2 px-2">
+      </nav>
+    </header>
+    <main class="col-md-8 col-md-offset-2">
+      <div class="title py-2 px-2">
         <h1 class="mt-1">View Images</h1>
-    </div>
-    <div class="button-rotate-feature">
+        <div class="pt-1"><a href="index.html">Home</a></div>
+      </div>
+      <div class="button-rotate-feature">
         <button id="rotate-clockwise">Rotate clockwise</button>
         <button id="rotate-anticlockwise">Rotate anti-clockwise</button>
-    </div>
-    <section class="view-images-grid-container centre container px-0">
+      </div>
+      <section class="view-images-grid-container centre container px-0">
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-1.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-1.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-2.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-2.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-3.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-3.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-4.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-4.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-5.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-5.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-6.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-6.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-7.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-7.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-8.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-8.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-9.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-9.jpg</p>
         </div>
         <div class="view-images-image-wrapper centre col-4 col-md-3 col-lg-2">
-            <img src="css/images/test-img-thumbnail.jpg" alt="test thumbnail image" class="allocation-thumbnail">
-            <p>Filename-10.jpg</p>
+          <img
+            src="css/images/test-img-thumbnail.jpg"
+            alt="test thumbnail image"
+            class="allocation-thumbnail"
+          />
+          <p>Filename-10.jpg</p>
         </div>
+      </section>
 
-    </section>
-
-    <div class="button-cancel-save">
+      <div class="button-cancel-save">
         <button id="cancel-btn" class="cancel">Cancel</button>
         <button id="save-btn" class="save">Save</button>
-    </div>
-
-</main>
-<script type="module" src="/src/imageRotate.js"></script>
-</body>
+      </div>
+    </main>
+    <script type="module" src="/src/imageRotate.js"></script>
+  </body>
 </html>
