update classnames for styling rotate feature btns.

--- a/view-images.html
+++ b/view-images.html
@@ -54,9 +54,9 @@
         <h1 class="mt-1">View Images</h1>
       </div>
 
-      <div class="button-rotate">
-        <button id="rotate-clockwise">Rotate clockwise</button>
-        <button id="rotate-anticlockwise">Rotate anti-clockwise</button>
+      <div class="button-rotate-feature">
+        <button id="rotate-clockwise" class="rotate-clockwise">Rotate clockwise</button>
+        <button id="rotate-anticlockwise" class="rotate-anticlockwise">Rotate anti-clockwise</button>
       </div>
       <div class="vw70">
         <section class="view-images-grid-container centre container px-0">
